2006-01-10 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix for bug #1366008
        * Fix for bug #1238736, when a log file is set eA will lock it
          before writing to it.

2005-11-22 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Disabled the cache dir check, to much people complaining
        * fixed eLoader

2005-11-22 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Some compile fixes from Chmouel Boudjnah

2005-11-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * check_cache_dir is only done when shm_only = 0
        * Only eA is disabled when init of shared mem or cache check fails

2005-11-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Removed executor hooks, they weren't used anyway.
        * Check if eA has a valid cache directory.
        * Make the init of php fail if the initialisation of the shared memory
          or cache directory failes.
        * set shared memory size in eaccelerator.ini to 0 so the default OS
          size is used.
        * README updates
        * Updated version to 0.9.4-rc1

2005-11-17 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed optimizer bug with php 5.0.5

2005-11-16 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch for including files in same directory (#1259695) from Alexy

2005-11-15 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Spinlock test now tests for i386 and x86_64. Because spinlocks where
          never used on 64-bit and sysv ipc locking didn't work, there were a 
          lot of problems.

2005-10-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * The two error message added to see if a lock has failed made configure 
          fail to compile the shared memory test.

2005-10-13 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed the php5 optimizer bug.
        * Changed semaphore permissions to 0666 so sysvipc locks work. Working 