@@ -1,12 +1,12 @@
 Actual Team :
-- Frank Alcantara  <frankalcantara at users.sourceforge.net>
 - Franck Tabary <franck34 at users.sourceforge.net>
 - Bart Vanbrabant <zoeloelip at users.sourceforge.net>
-- Shin Seung Woo <segv74 at users.sourceforge.net>
 
 Inactive member(s) :
 - Everaldo Canuto <everaldo_canuto at users.sourceforge.net>
 - Reiner Jung  <reinerj at users.sourceforge.net>  
+- Shin Seung Woo <segv74 at users.sourceforge.net>
+- Frank Alcantara  <frankalcantara at users.sourceforge.net>
 
 eAccelerator is based on Turck MMCache, written by
   Dmitry Stogov <dstogov at users.sourceforge.net>
