@@ -1,3 +1,11 @@
+2006-02-08 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * The owner of the a sysvipc mutex will now be changed on creation of
+          of the mutex. The user will be set to the uid set with 
+          --with-eaccelerator-userid. This way the semaphore doesn't need to
+          be public writable anymore.
+        * Moved some inactive contributors to the inactive list.
+
 2006-01-10 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Fix for bug #1366008
